@@ -6,9 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>374</height>
+    <width>390</width>
+    <height>375</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>390</width>
+    <height>375</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>390</width>
+    <height>375</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
@@ -40,12 +52,12 @@
     <rect>
      <x>10</x>
      <y>10</y>
-     <width>361</width>
-     <height>301</height>
+     <width>360</width>
+     <height>300</height>
     </rect>
    </property>
    <property name="currentIndex">
-    <number>2</number>
+    <number>0</number>
    </property>
    <widget class="QWidget" name="tabGeneral">
     <attribute name="title">
