@@ -4,8 +4,10 @@ HISTORY OF LGCK BUILDER
 *** 0.6.0.9
 
 - EDITOR: FontWizard lets you import system fonts
-- ENGINE: display support multiline text
-- ENGINE: display can have custom fonts
+- ENGINE: overlays now support multiline text
+- ENGINE: overlays can have custom fonts
+- EDITOR: mark/unmark all goals matching a sprite 
+- LUA: display_setFlagXY, display_setFont
 
 
 *** 0.6.0.8
